app/assets/stylesheets/_style.scss
/* ... */
.four-b_style_question {
  .test_question {
    margin-bottom: 50px;
  }
}

.user_marketing_overall_opt_in {
  margin-bottom: 15px;
}

.fieldWrapper {
  margin-bottom: 15px;
}
.fieldCheckbox label {
  font-size: 16px!important;
}

.input,
.input_label,
.input.email.user_email,
.input.password.user_password {
  display: flex;
  flex-direction: column;
  gap: 11px;

  label {
    font-size: 22px;
    color: #000;
    input[type="checkbox"] {
      border-radius: 4px;
      min-width: 20px;
      height: 20px;
      margin-right: 10px;
      vertical-align: middle;
      border: 1px solid #707070;
      cursor: pointer;
    }
    abbr[title] {
      text-decoration: none;
      border-bottom: 0;
    }
  }

  input {
    border: 2px solid #A9A9A9;
    border-radius: 4px;
    background: #E4E4E4;
    height: 46px;
    padding: 2px 10px;
  }
  &.error {
    small {
      color: #ea3e3e;
    }
    input {
      border: 2px solid #ea3e3e;
      background: #ffdcdc;
    }
  }
}

.input.email.user_email {
  margin-bottom: 20px;
}

.input_label {
  margin-bottom: 24px;

  &:nth-child(5) {
    margin-bottom: 0px;
  }
}

.remember__forget {
  margin-top: 20px;
  margin-bottom: 30px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: wrap;
}

.remember {
  display: flex;
  align-items: center;
  gap: 15px;
  margin-right: 15px;

  label {
    font-size: 22px;
    line-height: normal;
    font-weight: 400;
    display: flex;
    align-items: center;
    width: auto;
    cursor: pointer;
  }
}

.forget a {
  font-size: 18px;
  font-weight: 600;
  color: #000;
}

// section#login__area {
//   padding-top: 20px;
// }

.checkbox_wrap {
  position: relative;
  width: 21px;
  height: 21px;
  border: 1px solid #707070;
  border-radius: 4px;
  padding: 1px;
  flex-shrink: 0;

  input {
    position: absolute;
    width: 100%;
    height: 100%;
    opacity: 0;

    &:checked ~ .check_field {
      opacity: 1;
      visibility: visible;
    }
  }
}

.check_field {
  width: 100%;
  height: 100%;
  background: #6022A6;
  border-radius: 3px;
  opacity: 0;
  visibility: hidden;
}

// div.user_remember_me {
//   display: none;
// }

.submit {
  margin-top: 30px;

  // button.login {
  //   font-size: 29px;
  //   background-color: #fff;
  //   color: #6022A6;
  //   display: flex;
  //   align-items: center;
  //   justify-content: center;
  //   input {
  //     background-color: white;
  //     color: #6022A6;
  //   }
  //   img {
  //     width: 13px;
  //     margin-left: 10px;
  //   }
  // }
}
/*===================== LOGIN-AREA CSS AREA END =====================*/

section#qi__area,
section#reference__area {
  flex: 1;
  display: flex;
  .container {
    flex: 1;
    display: flex;
    .reference__wrap {
      display: flex;
      flex-direction: column;
      width: 100%;
      .test_wrap.not_four-b_style_question.results__page {
        flex: 1;
      }
    }
  }
  &.interactive__area {
    .assessment__content {
      background: transparent;
      border-radius: 0;
      padding: 0;
      > * {
        color: #000;
      }
    }
  }
}

/*===================== ENROL CSS AREA START =====================*/

// .radio_buttons {
//   height: 42px;
// }

.form-group label,
.input_label label {
  font-size: 18px;
}
.form-group label {
  line-height: normal;
}

.radio_buttons label {
  display: inline-flex;
  align-items: center;
  margin: 0 15px 10px 0;
  padding: 0;
  font-size: 18px!important;
  color: #000!important;
  cursor: pointer;
}

.please-tick {
  font-weight: normal;
  font-size: 0.875rem;
  color: #999;
}

.enrolment {
  .form-check {
    .invalid-feedback, abbr[title="required"] {
      display: none;
    }
  }
}

.marketing_opt_in, .non_euro_enrol {
  p {
    margin-top: 12px;
    margin-bottom: 12px;
  }
}

.marketing-purposes {
  br {
    display: none;
  }
}

// .input_label input[type="radio"] {
//     height: 13px;
// }

/*===================== ENROL CSS AREA END =====================*/

/*===================== LANDING CSS AREA START =====================*/

// section#landing__area {
//   padding-top: 140px;
//   margin-bottom: 200px;
// }

// .welcome__hero__content h4 {
//   color: #6022A6;
//   font-size: 46px;
//   font-weight: 600;
// }

p.landing_para {
  color: #000;
  font-size: 30px;
  font-weight: 400;
  line-height: 40px;
  max-width: 961px;

  a {
    color: #000;
    font-weight: 600;

    img {
      width: 8px;
      margin-left: 4px;
    }
  }
}

.landing__enroll a {
  img {
    width: 11px;
    filter: brightness(66);
  }

  font-size: 29px;
  font-weight: 600;
  color: #fff;
  background: #6022A6;
  width: 148px;
  height: 50px;
  border-radius: 36px;
  gap: 9px;
  margin-left: auto;
}

p.landing_para {
  &.landing_para1, &:last-child {
    max-width: 1040px;
    margin-bottom: 35px;
    font-size: 20px;
    line-height: 30px;
  }
}
/* ... */

